# irtui

./: .Cargo.toml.un~  .gitignore  Cargo.toml  Cargo.toml~  README.md  arch
.github/workflows/: build.yml  release.yml  rust.yml
demo/: demo.tape
src/: app.rs  event.rs  main.rs  pano.rs  roadtrip.rs  ui.rs
src/pano/: api.rs  mod.rs  shader.wgsl
