[package]
name = "irtui"
version = "0.1.0"
description = "A terminal user interface for the Neal.fun Internet Roadtrip"
authors = ["lazo4"]
license = "MIT"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
crossterm = { version = "0.29.0", features = ["event-stream"] }
image = "0.25.9"
ratatui = "0.30.0"
ratatui-image = { version = "10.0.5", default-features = false, features = [
	"crossterm",
	"image-defaults",
] }
reqwest = { version = "0.13.2", features = ["json"] }
regex = "1.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
futures = "0.3.32"
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
base64 = "0.22.1"
serde-aux = "4.7.0"
chrono = "0.4.44"
unicode-width = "0.2.2"

[target.'cfg(not(windows))'.dependencies]
ratatui-image = { version = "10.0.5" }

[dev-dependencies]
pretty_assertions = "1.4.1"
