[package]
name = "irtui"
version = "0.1.1"
description = "A terminal user interface for the Neal.fun Internet Roadtrip"
authors = ["lazo4"]
license = "MIT"
edition = "2024"

[dependencies]
ratatui = { version = "0.30.0", features = [
	"serde",
	"unstable-rendered-line-info",
] }
textwrap = { version = "0.16.2", default-features = false, features = [
	"unicode-width",
] }
anyhow = "1.0.101"
crossterm = { version = "0.29.0", features = ["event-stream"] }
image = { version = "0.25.9", default-features = false, features = ["jpeg"] }
ratatui-image = { version = "10.0.5", default-features = false, features = [
	"crossterm",
] }
futures = { version = "0.3.32", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
base64 = "0.22.1"
serde-aux = "4.7.0"
chrono = "0.4.45"
unicode-width = "0.2.2"
wreq = { version = "5.3.0", features = ["json", "websocket"] }
wreq-util = "2.2.6"
wgpu = { version = "29.0.3", default-features = false, features = [
	"std",
	"wgsl",
	"wgpu-core",
	"metal",
	"dx12",
	"vulkan",
	"gles",
	"parking_lot",
] }
glam = "0.33.0"
bytemuck = "1.25.0"

[dev-dependencies]
pretty_assertions = "1.4.1"

[features]
default = []
chafa-dyn = ["ratatui-image/chafa-dyn"]
chafa-static = ["ratatui-image/chafa-static"]
